After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598850 - totem's browser plugin doesn't read midi files (even when totem can)
totem's browser plugin doesn't read midi files (even when totem can)
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Browser plugin (obsolete)
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: totem-browser-maint
totem-browser-maint
Depends on:
Blocks:
 
 
Reported: 2009-10-18 16:43 UTC by Samuel Verschelde
Modified: 2009-10-21 23:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Support midi files in the browser plugin (925 bytes, patch)
2009-10-21 23:47 UTC, Bastien Nocera
committed Details | Review

Description Samuel Verschelde 2009-10-18 16:43:06 UTC
The browser plugin doesn't claim to have audio/midi support, even when the appropriate plugins are installed to give totem midi support.

Consequence : midi music won't play on this web page for example : http://home.nordnet.fr/~amoreaux/html/embed2.htm
Comment 1 Bastien Nocera 2009-10-21 23:47:38 UTC
Created attachment 146008 [details] [review]
Support midi files in the browser plugin

As Totem should be able to play those.
Comment 2 Bastien Nocera 2009-10-21 23:49:15 UTC
Attachment 146008 [details] pushed as dc268b8 - Support midi files in the browser plugin