Support midi files in the browser plugin

As Totem should be able to play those.

https://bugzilla.gnome.org/show_bug.cgi?id=598850